==================== 2.25.5.1 ====================

2009-01-21  Vincent Untz  <vuntz@gnome.org>

	* applet.c: (panel_applet_load_idle_handler): add missing break that
	makes the panel reach an assertion when a separator exists in the user
	configuration.

==================== 2.25.5 ====================

2009-01-20  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_menu_items_append_from_desktop): respect
	TryExec in the desktop file.
	Based on patch by Matthias Clasen <mclasen@redhat.com>
	Fix bug #555710.

2009-01-20  Vincent Untz  <vuntz@gnome.org>

	* applet.c: (panel_applet_stop_loading): the assertion there was wrong,
	and caused a crash when reloading an applet that crashed.

2009-01-20  Vincent Untz  <vuntz@gnome.org>

	* panel-toplevel.c: (panel_toplevel_update_struts): do not recompute
	the end position of the initial animation, since it's not needed, and
	it overrides the struts conflict resolution.

2009-01-20  Vincent Untz  <vuntz@gnome.org>

	* panel-session.c: (panel_session_init): add a reminder about things to
	check when migrating to eggsmclient.

2009-01-20  Vincent Untz  <vuntz@gnome.org>

	Connect to the session manager only when we're really ready, so that
	the struts are really set. Therefore, nautilus doesn't have jumping
	icons on login.
	Fix bug #563635.
	Based on patch by Behdad Esfahbod <behdad@gnome.org>

	* main.c: (main): don't connect to the session manager automatically,
	and move the session initialization code just before we enter the
	main loop
	* panel-session.c: (panel_session_init): connect to the session manager

2009-01-20  Vincent Untz  <vuntz@gnome.org>

	* panel-toplevel.c: (panel_toplevel_button_press_event): don't require
	the mouse button modifier to move a non-expanded panel. Only the
	handles can be grabbed, and they're there for that.

2009-01-20  Vincent Untz  <vuntz@gnome.org>

	Correctly set the struts before and during the initial toplevel
	animation, so that desktop icons don't jump.